# aitalked

./: Cargo.toml  README.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: actionlint.yml  ci.yml  review.yml
aitalked/: Cargo.toml
aitalked/src/: api.rs  binding.rs  lib.rs  model.rs
examples/helloworld/: Cargo.toml
examples/helloworld/src/: main.rs
src/: aitalked.rs  main.rs
