[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8.35"
aitalked = { path = "../../aitalked" }
anyhow = "1"
directories = "6"
